# backends/php-laravel/routes/api.php
@@ -36,6 +36,7 @@ Route::prefix('clients')->controller(ClientController::class)->group(function ()
     Route::put('{id}/update', 'update')->whereNumber('id');
     Route::get('{id}', 'show')->whereNumber('id');
     Route::delete('{id}/delete', 'destroy')->whereNumber('id');
+    Route::get('{identifier}/qr', 'qr')->where('identifier', '[a-zA-Z0-9._-]+');
 });
 
 // --- staffs ---
